maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:16: error: ';' expected but ')' found.
    while (sommeAngle !=0 && !(estFaceMur())))
                                             ^